- [#5662] Add an EventStateService
- [#5660] Add an EmailService
- [#5664] Per-event flag for muting the notification emails
- [#5651] Convert the cron job to a Scheduler task
- [#5650] Limit the number of seats in the registration drop-down
- [#5653] Add a configuration for PDF rendering of the manual
- [#5628] Add a RealURL auto configuration

Bug fixes:
- [#5684] Cannot create new content element due to incorrect locallang path
- [#5670] Increase counter cache for registrations after registration
- [#5671] Test failures in MailNotifierTest
- [#5669] Disable the new checkboxes by default
- [#5648] Also email the organizers when a registration make the event more than possible
- [#5413] showFeUserFieldsInRegistrationForm does not hide unused markers
- [#5649] Heading for the FE user gender is missing in the CSV export
- [#5624] Salutation from onetimeaccount not used for the billing address
- [#5602] Stop requiring the oelib autoloader
- [#5539] Move class.ext_update.php back into the extension root
- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5612] Rename tx_seminars_tcemainprocdm to Tx_Seminars_TceMainProcDm
- [#5625] Rename tx_seminars_pi2 to Tx_Seminars_Csv_CsvDownloader
- [#5680] Unify "state/status" to "status"
- [#5679] Add convenience functions for the event status
- [#5678] Add Event::getFirstOrganizer
- [#5360] Reformat the code to PSR-2
- [#5632] Move language files to Resources/Private/Language
- [#5660] Move the cancelation/confirmation of an event to services
- [#5659] Remove the "used tools" section from the manual
- [#5658] Replace "language" in the PHPDoc
- [#5657] Remove the byte order mark from the ReST files