@@ -3684,7 +3684,7 @@ tx_seminars_pi2 {
 
 	10 = USER
 	10 {
-		userFunc = CsvDownloader->main
+		userFunc = Tx_Seminars_Csv_CsvDownloader->main
 
 		# pro forma salutation mode for the FE; has no effect whatsoever
 		salutation = formal
