@@ -43,7 +43,8 @@ defined('TYPO3_MODE') or die('Access denied.');
 
 // Adds our custom function to a hook in \TYPO3\CMS\Core\DataHandling\DataHandler
 // Used for post-validation of fields in back-end forms.
-$GLOBALS ['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['processDatamapClass'][] = 'EXT:seminars/Classes/Hooks/TceProcessingHook.php:TceProcessingHook';
+$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['processDatamapClass']['seminars']
+    = 'Tx_Seminars_Hooks_TceProcessingHook';
 
 \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addPItoST43(
     $_EXTKEY, 'Classes/FrontEnd/DefaultController.php', '_pi1', 'list_type', 0
@@ -68,6 +69,6 @@ $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['scheduler']['tasks'][\OliverKlee\Semi
     'additionalFields' => \OliverKlee\Seminars\SchedulerTasks\MailNotifierConfiguration::class,
 ];
 
-// RealURL autoconfiguration
+// RealURL auto-configuration
 $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['ext/realurl/class.tx_realurl_autoconfgen.php']['extensionConfiguration']['seminars']
     = 'OliverKlee\\Seminars\\RealUrl\\Configuration->addConfiguration';
